pushing mongodb connection and api setup

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.data.mongodb.port=27017
 server.port=8082
 spring.data.mongodb.uri=mongodb+srv://frazierelise07:zbpnbmoglq59czWl@cluster0.ihm99.mongodb.net/admin
 spring.docker.compose.enabled=false
-# spring.data.mongodb.authentication-database=admin
-# spring.data.mongodb.username=admin
-# spring.data.mongodb.password=zbpnbmoglq59czWl
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=frazierelise07
+spring.data.mongodb.password=zbpnbmoglq59czW
 # spring.data.mongodb.uri=mongodb+srv://frazierelise07:zbpnbmoglq59czWl@cluster0.ihm99.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # mongodb+srv://frazierelise07:zbpnbmoglq59czWl@cluster0.ihm99.mongodb.net/
 # spring.data.mongodb.uri=mongodb://admin:=0IAA05lYVCiWSDx@localhost:27017/sample_mflix
